assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


State 22 conflicts: 1 shift/reduce
State 114 conflicts: 15 shift/reduce
State 132 conflicts: 9 shift/reduce
State 143 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'
    6      | CLASS error ';' class

    7 dummy_feature_list: %empty
    8                   | dummy_feature_list feature
    9                   | error ';' dummy_feature_list

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID ':' TYPEID ASSIGN expr ';'
   12        | OBJECTID ':' TYPEID ';'

   13 formal_list: %empty
   14            | formal_list ',' formal

   15 formal: TYPEID ':' OBJECTID

   16 case_list: case
   17          | case_list case

   18 case: OBJECTID ':' TYPEID DARROW expr ';'

   19 expr_blocks: expr ';'
   20            | expr_blocks expr ';'
   21            | error ';' expr_blocks

   22 let_list: OBJECTID ':' TYPEID IN expr
   23         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   24         | OBJECTID ':' TYPEID ',' let_list
   25         | OBJECTID ':' TYPEID ASSIGN expr ',' let_list
   26         | error ',' let_list

   27 expr_list: %empty
   28          | expr_list ',' expr

   29 expr: TYPEID ASSIGN expr
   30     | expr '@' TYPEID '.' OBJECTID '(' expr_list ')'
   31     | expr '.' OBJECTID '(' expr_list ')'
   32     | OBJECTID '(' expr_list ')'
   33     | IF expr THEN expr ELSE expr FI
   34     | WHILE expr LOOP expr POOL
   35     | '{' expr_blocks '}'
   36     | LET let_list
   37     | CASE expr OF case_list ESAC
   38     | NEW TYPEID
   39     | ISVOID expr
   40     | expr '+' expr
   41     | expr '-' expr
   42     | expr '*' expr
   43     | expr '/' expr
   44     | '~' expr
   45     | expr '<' expr
   46     | expr LE expr
   47     | expr '=' expr
   48     | NOT expr
   49     | '(' expr ')'
   50     | OBJECTID
   51     | INT_CONST
   52     | STR_CONST
   53     | BOOL_CONST


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 10 30 31 32 49
    ')' (41) 10 30 31 32 49
    '*' (42) 42
    '+' (43) 40
    ',' (44) 14 24 25 26 28
    '-' (45) 41
    '.' (46) 30 31
    '/' (47) 43
    ':' (58) 10 11 12 15 18 22 23 24 25
    ';' (59) 4 5 6 9 10 11 12 18 19 20 21
    '<' (60) 45
    '=' (61) 47
    '@' (64) 30
    '{' (123) 4 5 10 35
    '}' (125) 4 5 10 35
    '~' (126) 44
    error (256) 6 9 21 26
    CLASS (258) 4 5 6
    ELSE (259) 33
    FI (260) 33
    IF (261) 33
    IN (262) 22 23
    INHERITS (263) 5
    LET (264) 36
    LOOP (265) 34
    POOL (266) 34
    THEN (267) 33
    WHILE (268) 34
    CASE (269) 37
    ESAC (270) 37
    OF (271) 37
    DARROW (272) 18
    NEW (273) 38
    ISVOID (274) 39
    STR_CONST <symbol> (275) 52
    INT_CONST <symbol> (276) 51
    BOOL_CONST <boolean> (277) 53
    TYPEID <symbol> (278) 4 5 10 11 12 15 18 22 23 24 25 29 30 38
    OBJECTID <symbol> (279) 10 11 12 15 18 22 23 24 25 30 31 32 50
    ASSIGN (280) 11 23 25 29
    NOT (281) 48
    LE (282) 46
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3 6
    dummy_feature_list <features> (49)
        on left: 7 8 9
        on right: 4 5 8 9
    feature <feature> (50)
        on left: 10 11 12
        on right: 8
    formal_list <formals> (51)
        on left: 13 14
        on right: 10 14
    formal <formal> (52)
        on left: 15
        on right: 14
    case_list <cases> (53)
        on left: 16 17
        on right: 17 37
    case <case_> (54)
        on left: 18
        on right: 16 17
    expr_blocks <expressions> (55)
        on left: 19 20 21
        on right: 20 21 35
    let_list <expression> (56)
        on left: 22 23 24 25 26
        on right: 24 25 26 36
    expr_list <expressions> (57)
        on left: 27 28
        on right: 28 30 31 32
    expr <expression> (58)
        on left: 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
        on right: 10 11 18 19 20 22 23 25 28 29 30 31 33 34 37 39 40 41 42 43 44 45 46 47 48 49


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'
    6      | CLASS . error ';' class

    error   shift, and go to state 5
    TYPEID  shift, and go to state 6


State 2

    0 $accept: program . $end

    $end  shift, and go to state 7


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 8


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    6 class: CLASS error . ';' class

    ';'  shift, and go to state 9


State 6

    4 class: CLASS TYPEID . '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' dummy_feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 7

    0 $accept: program $end .

    $default  accept


State 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 9

    6 class: CLASS error ';' . class

    CLASS  shift, and go to state 1

    class  go to state 12


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  shift, and go to state 13


State 11

    4 class: CLASS TYPEID '{' . dummy_feature_list '}' ';'

    error  shift, and go to state 14

    OBJECTID  reduce using rule 7 (dummy_feature_list)
    '}'       reduce using rule 7 (dummy_feature_list)

    dummy_feature_list  go to state 15


State 12

    6 class: CLASS error ';' class .

    $default  reduce using rule 6 (class)


State 13

    5 class: CLASS TYPEID INHERITS TYPEID . '{' dummy_feature_list '}' ';'

    '{'  shift, and go to state 16


State 14

    9 dummy_feature_list: error . ';' dummy_feature_list

    ';'  shift, and go to state 17


State 15

    4 class: CLASS TYPEID '{' dummy_feature_list . '}' ';'
    8 dummy_feature_list: dummy_feature_list . feature

    OBJECTID  shift, and go to state 18
    '}'       shift, and go to state 19

    feature  go to state 20


State 16

    5 class: CLASS TYPEID INHERITS TYPEID '{' . dummy_feature_list '}' ';'

    error  shift, and go to state 14

    OBJECTID  reduce using rule 7 (dummy_feature_list)
    '}'       reduce using rule 7 (dummy_feature_list)

    dummy_feature_list  go to state 21


State 17

    9 dummy_feature_list: error ';' . dummy_feature_list

    error  shift, and go to state 14

    OBJECTID  reduce using rule 7 (dummy_feature_list)
    '}'       reduce using rule 7 (dummy_feature_list)

    dummy_feature_list  go to state 22


State 18

   10 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID . ':' TYPEID ASSIGN expr ';'
   12        | OBJECTID . ':' TYPEID ';'

    '('  shift, and go to state 23
    ':'  shift, and go to state 24


State 19

    4 class: CLASS TYPEID '{' dummy_feature_list '}' . ';'

    ';'  shift, and go to state 25


State 20

    8 dummy_feature_list: dummy_feature_list feature .

    $default  reduce using rule 8 (dummy_feature_list)


State 21

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list . '}' ';'
    8 dummy_feature_list: dummy_feature_list . feature

    OBJECTID  shift, and go to state 18
    '}'       shift, and go to state 26

    feature  go to state 20


State 22

    8 dummy_feature_list: dummy_feature_list . feature
    9                   | error ';' dummy_feature_list .

    OBJECTID  shift, and go to state 18

    OBJECTID  [reduce using rule 9 (dummy_feature_list)]
    $default  reduce using rule 9 (dummy_feature_list)

    feature  go to state 20


State 23

   10 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}' ';'

    $default  reduce using rule 13 (formal_list)

    formal_list  go to state 27


State 24

   11 feature: OBJECTID ':' . TYPEID ASSIGN expr ';'
   12        | OBJECTID ':' . TYPEID ';'

    TYPEID  shift, and go to state 28


State 25

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 26

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' . ';'

    ';'  shift, and go to state 29


State 27

   10 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}' ';'
   14 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 30
    ','  shift, and go to state 31


State 28

   11 feature: OBJECTID ':' TYPEID . ASSIGN expr ';'
   12        | OBJECTID ':' TYPEID . ';'

    ASSIGN  shift, and go to state 32
    ';'     shift, and go to state 33


State 29

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 30

   10 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 34


State 31

   14 formal_list: formal_list ',' . formal

    TYPEID  shift, and go to state 35

    formal  go to state 36


State 32

   11 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    TYPEID      shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 52


State 33

   12 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 12 (feature)


State 34

   10 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 53


State 35

   15 formal: TYPEID . ':' OBJECTID

    ':'  shift, and go to state 54


State 36

   14 formal_list: formal_list ',' formal .

    $default  reduce using rule 14 (formal_list)


State 37

   33 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    TYPEID      shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 55


State 38

   36 expr: LET . let_list

    error     shift, and go to state 56
    OBJECTID  shift, and go to state 57

    let_list  go to state 58


State 39

   34 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    TYPEID      shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 59


State 40

   37 expr: CASE . expr OF case_list ESAC

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    TYPEID      shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 60


State 41

   38 expr: NEW . TYPEID

    TYPEID  shift, and go to state 61


State 42

   39 expr: ISVOID . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    TYPEID      shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 62


State 43

   52 expr: STR_CONST .

    $default  reduce using rule 52 (expr)


State 44

   51 expr: INT_CONST .

    $default  reduce using rule 51 (expr)


State 45

   53 expr: BOOL_CONST .

    $default  reduce using rule 53 (expr)


State 46

   29 expr: TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 63


State 47

   32 expr: OBJECTID . '(' expr_list ')'
   50     | OBJECTID .

    '('  shift, and go to state 64

    $default  reduce using rule 50 (expr)


State 48

   48 expr: NOT . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    TYPEID      shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 65


State 49

   44 expr: '~' . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    TYPEID      shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 66


State 50

   35 expr: '{' . expr_blocks '}'

    error       shift, and go to state 67
    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    TYPEID      shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr_blocks  go to state 68
    expr         go to state 69


State 51

   49 expr: '(' . expr ')'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    TYPEID      shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 70


State 52

   11 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   30 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   31     | expr . '.' OBJECTID '(' expr_list ')'
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr

    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79
    ';'  shift, and go to state 80


State 53

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 81


State 54

   15 formal: TYPEID ':' . OBJECTID

    OBJECTID  shift, and go to state 82


State 55

   30 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   31     | expr . '.' OBJECTID '(' expr_list ')'
   33     | IF expr . THEN expr ELSE expr FI
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr

    THEN  shift, and go to state 83
    LE    shift, and go to state 71
    '<'   shift, and go to state 72
    '='   shift, and go to state 73
    '+'   shift, and go to state 74
    '-'   shift, and go to state 75
    '*'   shift, and go to state 76
    '/'   shift, and go to state 77
    '@'   shift, and go to state 78
    '.'   shift, and go to state 79


State 56

   26 let_list: error . ',' let_list

    ','  shift, and go to state 84


State 57

   22 let_list: OBJECTID . ':' TYPEID IN expr
   23         | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   24         | OBJECTID . ':' TYPEID ',' let_list
   25         | OBJECTID . ':' TYPEID ASSIGN expr ',' let_list

    ':'  shift, and go to state 85


State 58

   36 expr: LET let_list .

    $default  reduce using rule 36 (expr)


State 59

   30 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   31     | expr . '.' OBJECTID '(' expr_list ')'
   34     | WHILE expr . LOOP expr POOL
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr

    LOOP  shift, and go to state 86
    LE    shift, and go to state 71
    '<'   shift, and go to state 72
    '='   shift, and go to state 73
    '+'   shift, and go to state 74
    '-'   shift, and go to state 75
    '*'   shift, and go to state 76
    '/'   shift, and go to state 77
    '@'   shift, and go to state 78
    '.'   shift, and go to state 79


State 60

   30 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   31     | expr . '.' OBJECTID '(' expr_list ')'
   37     | CASE expr . OF case_list ESAC
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr

    OF   shift, and go to state 87
    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79


State 61

   38 expr: NEW TYPEID .

    $default  reduce using rule 38 (expr)


State 62

   30 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   31     | expr . '.' OBJECTID '(' expr_list ')'
   39     | ISVOID expr .
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr

    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 39 (expr)


State 63

   29 expr: TYPEID ASSIGN . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    TYPEID      shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 88


State 64

   32 expr: OBJECTID '(' . expr_list ')'

    $default  reduce using rule 27 (expr_list)

    expr_list  go to state 89


State 65

   30 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   31     | expr . '.' OBJECTID '(' expr_list ')'
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr
   48     | NOT expr .

    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 48 (expr)


State 66

   30 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   31     | expr . '.' OBJECTID '(' expr_list ')'
   40     | expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | '~' expr .
   45     | expr . '<' expr
   46     | expr . LE expr
   47     | expr . '=' expr

    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 44 (expr)


State 67

   21 expr_blocks: error . ';' expr_blocks

    ';'  shift, and go to state 90


State 68

   20 expr_blocks: expr_blocks . expr ';'
   35 expr: '{' expr_blocks . '}'
